Bug 1597055 - Don't stretch grid items with non-auto block-size. r=mats

Per the resolution in https://github.com/w3c/csswg-drafts/issues/4525.

Differential Revision: https://phabricator.services.mozilla.com/D60675